-
Bug
-
Resolution: Done
-
P2: Important
-
4.5.0, 4.5.1, 4.5.2, 4.5.3, 4.6.0, 4.6.1, 4.6.2, 4.6.3, 4.7.0
-
I see that bug in Linux and Windows XP, I can't say if others O.S. are affected.
-
c09e9f71173a698670d6c728291ee24f53d50800 (4.8)
When echoMode on QLineEdit is setted to PasswordEchoOnEdit, the password can be showed before they are masked to ******* doing this steps:
1- set the mode to PasswordEchoOnEdit
2- set the text
3- draw the widget (at this step the text will be displayed as dots or *****)
4- put the cursor on the end of ****
5- press backspace (the text will be erased at all)
6- now press [Ctrl]+[Z] the password before hide will be showed!!!