src/widgets/widgets/qwidgetlinecontrol_p.h
@@ -125,8 +125,8 @@ public:
         return (c != -1 ? c : 0);
     }
 
-    bool isUndoAvailable() const { return !m_readOnly && m_undoState; }
-    bool isRedoAvailable() const { return !m_readOnly && m_undoState < (int)m_history.size(); }
+    bool isUndoAvailable() const;
+    bool isRedoAvailable() const;
     void clearUndo() { m_history.clear(); m_modifiedState = m_undoState = 0; }
 
     bool isModified() const { return m_modifiedState != m_undoState; }
